# Dynamic-System-Analysis

./: README.md  pyproject.toml
matanalize/: functions.py  main.py
