[tool.poetry]
name = "matanalize"
version = "0.1.0"
description = ":)"
authors = ["Arnas Stonkus, Adomas Auga"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.7.2"
pandas = "^2.1.0"
numpy = "^1.25.2"

[tool.poetry.scripts]
matanalize = "matanalize.main:main"
attempt = "matanalize.attempt:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
